# invgen

./: .gitignore  .pre-commit-config.yaml  README.md  hello.py  pyproject.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  codeql.yml  pr.yml  release.yaml  release.yml  reusable-jobs.yml
dagi/: __main__.py  cmd.py  files.py  hosts.py  inventory.py  logging.py  metadata.py
data/hosts/: ap01.yaml
data/metadata/groups/: home.yaml
data/metadata/os/: linux.yaml
data/metadata/services/: graylog.yaml
example/hosts/: ap01.test.local.yaml
example/metadata/hardware/: raspberry-pi-4.yaml
example/metadata/os/: rhel-9.yaml
example/metadata/services/: podman-rootless.yaml
example/templates/: host.yaml
invgen/: __main__.py  cmd.py  files.py  hosts.py  inventory.py  logging.py  metadata.py  templates.py  watcher.py
tests/: cmd_test.py  files_test.py  hosts_test.py  inventory_test.py  metadata_test.py  templates_test.py  watcher_test.py
