[project]
name = "invgen"
version = "0.2.0"
description = "Dynamic Ansible Inventory Generator"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["pyyaml>=6.0.2", "typer>=0.13.1", "uv>=0.5.4"]

[project.scripts]
invgen = "invgen.cmd:app"

[tool.setuptools]
packages = ["invgen"]

[tool.uv]
dev-dependencies = ["pytest>=8.3.3"]
