[project]
name = "invgen"
version = "0.5.0"
description = "Dynamic Ansible Inventory Generator"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jinja2",
    "pyyaml>=6.0.2",
    "typer>=0.13.1",
    "uv>=0.5.4",
    "watchdog",
]

[project.scripts]
invgen = "invgen.cmd:app"
invgen-ansible = "invgen.inventory:inventory_app"

[tool.setuptools]
packages = ["invgen"]

[tool.uv]
dev-dependencies = ["pre-commit>=4.0.1", "pytest>=8.3.3"]
